# Como-retornar-arquivos-no-FastAPI

./: LICENSE  README.md  main.py  pyproject.toml
files/: index.html
