[tool.poetry]
name = "apidweimagem"
version = "0.1.0"
description = ""
authors = ["BrunoRagner <brunooragnner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
aiofiles = "^0.8.0"
hypercorn = "^0.13.2"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
